@@ -9,11 +9,13 @@ package org.elasticsearch.xpack.security.rest.action.user;
 import org.elasticsearch.action.ActionResponse;
 import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.common.bytes.BytesReference;
+import org.elasticsearch.common.RestApiVersion;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
+import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.action.RestBuilderListener;
@@ -21,12 +23,10 @@ import org.elasticsearch.xpack.core.XPackSettings;
 import org.elasticsearch.xpack.core.security.SecurityContext;
 import org.elasticsearch.xpack.core.security.authc.support.Hasher;
 import org.elasticsearch.xpack.core.security.client.SecurityClient;
-import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.xpack.core.security.user.User;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -47,22 +47,16 @@ public class RestChangePasswordAction extends SecurityBaseRestHandler implements
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.unmodifiableList(Arrays.asList(
-            new ReplacedRoute(PUT, "/_security/user/{username}/_password",
-                PUT, "/_xpack/security/user/{username}/_password"),
-            new ReplacedRoute(POST, "/_security/user/{username}/_password",
-                POST, "/_xpack/security/user/{username}/_password"),
-            new ReplacedRoute(PUT, "/_security/user/_password",
-                PUT, "/_xpack/security/user/_password"),
-            new ReplacedRoute(POST, "/_security/user/_password",
-                POST, "/_xpack/security/user/_password")
-        ));
+        return org.elasticsearch.common.collect.List.of(
+            Route.builder(PUT, "/_security/user/{username}/_password")
+                .replaces(PUT, "/_xpack/security/user/{username}/_password", RestApiVersion.V_7).build(),
+            Route.builder(POST, "/_security/user/{username}/_password")
+                .replaces(POST, "/_xpack/security/user/{username}/_password", RestApiVersion.V_7).build(),
+            Route.builder(PUT, "/_security/user/_password")
+                .replaces(PUT, "/_xpack/security/user/_password", RestApiVersion.V_7).build(),
+            Route.builder(POST, "/_security/user/_password")
+                .replaces(POST, "/_xpack/security/user/_password", RestApiVersion.V_7).build()
+        );
     }
 
     @Override
