@@ -7,15 +7,16 @@
 package org.elasticsearch.xpack.security.rest.action.user;
 
 import org.elasticsearch.client.node.NodeClient;
+import org.elasticsearch.common.RestApiVersion;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
+import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
-import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.rest.action.RestBuilderListener;
 import org.elasticsearch.xpack.core.XPackSettings;
 import org.elasticsearch.xpack.core.security.action.user.PutUserRequestBuilder;
@@ -25,7 +26,6 @@ import org.elasticsearch.xpack.core.security.client.SecurityClient;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
@@ -47,18 +47,12 @@ public class RestPutUserAction extends SecurityBaseRestHandler implements RestRe
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.unmodifiableList(Arrays.asList(
-            new ReplacedRoute(POST, "/_security/user/{username}",
-                POST, "/_xpack/security/user/{username}"),
-            new ReplacedRoute(PUT, "/_security/user/{username}",
-                PUT, "/_xpack/security/user/{username}")
-        ));
+        return org.elasticsearch.common.collect.List.of(
+            Route.builder(POST, "/_security/user/{username}")
+                .replaces(POST, "/_xpack/security/user/{username}", RestApiVersion.V_7).build(),
+            Route.builder(PUT, "/_security/user/{username}")
+                .replaces(PUT, "/_xpack/security/user/{username}", RestApiVersion.V_7).build()
+        );
     }
 
     @Override
